--- a/css/style.css
+++ b/css/style.css
@@ -412,10 +412,10 @@ input:disabled {
   position: relative;
 }
 
-/* .c-nav__link:focus,
+.c-nav__link:focus,
 .c-nav__link:hover {
-  color: var(--global-color-beta);
-} */
+  color: var(--global-color-gray-xxxx-light);
+}
 
 .c-nav__link:focus:after,
 .c-nav__link:hover:after {
@@ -545,6 +545,26 @@ input:disabled {
   .c-mobile-nav {
     display: none !important;
   }
+}
+
+.c-home__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../img/lowpoly.svg) no-repeat center center / cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.c-home__background-gradiant {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(255, 255, 255));
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 /*
