--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,6 @@ a {
   outline-offset: 2px;
 }
 
-a:visited,
 a:active {
   color: var(--global-color-alpha);
 }
@@ -404,7 +403,6 @@ input:disabled {
 }
 
 .c-nav__link,
-.c-nav__link:visited,
 .c-nav__link:active {
   color: var(--global-color-gray-xxxx-light);
   text-transform: uppercase;
@@ -419,12 +417,13 @@ input:disabled {
 
 .c-nav__link:focus:after,
 .c-nav__link:hover:after {
-  width: calc(50% - 16px);
+  width: 100%;
+  max-width: 40px;
 }
 
 .c-nav__link--meta:focus:after,
 .c-nav__link--meta:hover:after {
-  width: 0%;
+  display: none;
 }
 
 .c-nav__link--meta:focus,
@@ -436,7 +435,7 @@ input:disabled {
   content: '';
   pointer-events: none;
   bottom: -2px;
-  left: 16px;
+  left: 0;
   position: absolute;
   width: 0%;
   height: 2px;
@@ -538,6 +537,15 @@ input:disabled {
   .c-mobile-nav__body {
     padding: 48px;
   }
+
+  .c-nav__link:after {
+    left: 16px;
+  }
+
+  .c-nav__link:focus:after,
+  .c-nav__link:hover:after {
+    width: calc(50% - 16px);
+  }
 }
 
 @media (min-width: 992px) {
@@ -551,7 +559,7 @@ input:disabled {
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../img/lowpoly.svg) no-repeat center center / cover;
+  background: url(../img/LW002.jpg) no-repeat center center / cover;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -561,10 +569,108 @@ input:disabled {
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(to left, rgba(0, 0, 0, 0), rgb(255, 255, 255));
+  background: linear-gradient(to left, rgba(0, 0, 0, 0) 50%, rgb(255, 255, 255) 80%);
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+.c-home__background-man {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: url(../img/man.png) no-repeat center center / cover;
+  width: 50%;
+  height: 100%;
+  z-index: -1;
+  display: none;
+}
+
+.c-home__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 16px;
+  max-width: 400px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  z-index: -1;
+}
+
+.c-home__title {
+  font-size: 48px;
+  line-height: 1.5;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.c-home__title--highlight1 {
+  color: var(--global-color-beta);
+}
+
+.c-home__title--highlight2 {
+  color: var(--global-color-alpha);
+}
+
+.c-home__description {
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 400;
+  margin-bottom: 16px;
+}
+
+.c-home__button:focus,
+.c-home__button:hover {
+  background-color: var(--global-color-beta);
+  color: var(--global-color-alpha-xx-dark);
+}
+
+.c-home__button,
+.c-home__button:active {
+  font-size: 12px;
+  line-height: 1.5;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 8px 16px;
+  border: 2px solid var(--global-color-beta);
+  color: var(--global-color-gray-xxxxx-dark);
+  background-color: transparent;
+  transition: all 0.25s ease;
+}
+
+@media (min-width: 768px) {
+  .c-home__background-man {
+    display: block;
+  }
+}
+
+@media (min-width: 992px) {
+  .c-home__background-man {
+    display: block;
+  }
+
+  .c-home__title {
+    font-size: 64px;
+  }
+
+  .c-home__description {
+    font-size: 24px;
+  }
+
+  .c-home__content {
+    max-width: 700px;
+    left: 5vw;
+  }
+
+  .c-home__button {
+    font-size: 16px;
+    padding: 16px 32px;
+  }
 }
 
 /*
@@ -573,4 +679,8 @@ input:disabled {
 
 .u-mb-clear {
   margin-bottom: 0;
+}
+
+body:has(.has-mobile-nav) {
+  background-color: var(--global-color-alpha-xx-dark);
 }
