fixed img on routes

--- a/css/style.css
+++ b/css/style.css
@@ -712,7 +712,7 @@ input:disabled {
 }
 
 .c-wall__backgouround-1 {
-  background-image: url(/img/Wall/sander.png);
+  background-image: url(/img/Wall/sander.jpg);
 }
 
 .c-wall__backgouround-2 {
