--- a/css/style.css
+++ b/css/style.css
@@ -444,8 +444,7 @@ input:disabled {
   width: 0%;
   height: 2px;
   background-color: var(--global-color-gray-xxxx-light);
-  transition: width 0.1s ease-in-out, left 0.1s ease-in-out;
-  transition: background-color 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .c-nav__link:active {
